# QCamber_fork

./: CMakeLists.txt
src/: CMakeLists.txt
src/gui/: clickablelabel.cpp  clickablelabel.h  featurepropertiesdialog.cpp  featurepropertiesdialog.h  featureshistogramwidget.cpp  featureshistogramwidget.h  gui.pri  home.cpp  home.h  jobmanagerdialog.cpp  jobmanagerdialog.h  jobmatrix.cpp  jobmatrix.h  layerinfobox.cpp  layerinfobox.h  settingsdialog.cpp  settingsdialog.h  symbolcount.cpp  symbolcount.h  viewerwindow.cpp  viewerwindow.h
src/parser/odbpp/: featuresparser.cpp  fontparser.cpp  notesparser.cpp  structuredtextparser.cpp
